--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "Sample Theme",
+	"name": "Tron Legacy",
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md"
+	"author": "John L. Orrell",
+	"authorUrl": "http://www.johnorrell.net/"
 }
