--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Tron Legacy",
-	"version": "1.0.0",
-	"minAppVersion": "1.0.0",
 	"author": "John L. Orrell",
+	"version": "0.1.0",
+	"minAppVersion": "1.0.0",
+	"description": "Obsidian theme using a Tron Legacy styled color palette.",
 	"authorUrl": "http://www.johnorrell.net/"
 }
