Update manifest.json - Added a "dash".

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
 	"author": "John L. Orrell",
 	"version": "0.1.0",
 	"minAppVersion": "1.0.0",
-	"description": "Obsidian theme using a Tron Legacy styled color palette.",
+	"description": "Obsidian theme using a Tron Legacy-styled color palette.",
 	"authorUrl": "http://www.johnorrell.net/"
 }
